# Kongfan_tracking

./: .gitignore  README.md  train.ipynb
artifacts/kongfan_version1:v0/: motion.npz
artifacts/kongfan_version2:v0/: motion.npz
artifacts/kongfan_version2_fix_height:v0/: motion.npz
outputs/2025-12-29/15-14-05/.hydra/: hydra.yaml
processed_vedio_data/: kongfan_version1.csv  kongfan_version2.csv  kongfan_version2_fix_height.csv
scripts/: csv_to_npz.py  replay_npz.py
scripts/rsl_rl/: cli_args.py  play.py  train.py  train_local.py
source/whole_body_tracking/whole_body_tracking.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
source/whole_body_tracking/whole_body_tracking/assets/unitree_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
source/whole_body_tracking/whole_body_tracking/assets/unitree_description/launch/: view_robot.launch.py
source/whole_body_tracking/whole_body_tracking/assets/unitree_description/mjcf/: g1.xml  go1.xml  go2.xml
source/whole_body_tracking/whole_body_tracking/assets/unitree_description/urdf/g1/: main.urdf  mujoco.xacro  real.xacro  robot.xacro  ros2_control.xacro
source/whole_body_tracking/whole_body_tracking/assets/unitree_description/urdf/go2/: main.urdf  mujoco.xacro  real.xacro  robot.xacro  ros2_control.xacro
source/whole_body_tracking/whole_body_tracking/assets/unitree_description/urdf/sdk1/: robot.xacro
source/whole_body_tracking/whole_body_tracking/assets/unitree_description/urdf/sdk1/common/: leg.xacro  mujoco.xacro  real.xacro  ros2_control.xacro
(+74 files in other folders)
