<?xml version="1.0"?>
<package format="2">
    <name>unitree_description</name>
    <version>0.3.2</version>
    <description>Unitree robot description files</description>
    <maintainer email="liaoqiayuan@gmail.com">Qiayuan Liao</maintainer>
    <license>BSD</license>
    <author email="liaoqiayuan@gmail.com">Qiayuan Liao</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>xacro</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
